Added popup html

--- a/popup.html
+++ b/popup.html
@@ -3,12 +3,18 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CodesWithRobi - Links</title>
+  <link rel="stylesheet" href="popup.css" />
 </head>
 
 <body>
-  THIS IS MY POPUP
+  <div class="popup">
+    <h1>CodesWithRobi</h1>
+    <p>Follow me on my platforms:</p>
+    <a href="https://github.com/CodesWithRobi" target="_blank" class="github">GitHub</a>
+    <a href="https://www.linkedin.com/in/CodesWithRobi" target="_blank" class="linkedin">LinkedIn</a>
+  </div>
 </body>
 
 </html>
